--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Login page for accessing secure areas." />
     <link rel="icon" type="image/png" href="2.png" />
     <title>Login Page</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="style2.css" />
   </head>
   <body class="body1">
     <a href="https://github.com/akiidayo/akiidayo.git">
